applications/kunpeng/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      nodeSelector:
        openeuler.ci/task: common
      containers:
        - name: jenkins
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/jenkins:lts
          resources:
            limits:
              cpu: 12000m
              memory: 32000Mi
            requests:
              cpu: 6000m
              memory: 16000Mi
