applications/kunpeng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 24253a5d-f47a-462e-bee9-586b880900a9
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: slavelistener
      port: 50000
      targetPort: 50000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
spec:
  ports:
    - name: http
      port: 80
      # we need pin the node port here in order to be visitable via node
      targetPort: 8080
      nodePort: 30082
    - name: slavelistener
      port: 50000
      # we need pin the node port here in order to be visitable via node
      nodePort: 30052
      targetPort: 50000
  type: NodePort
