applications/kunpeng/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-ingress
spec:
  tls:
    - hosts:
        - kunpengaccci.osinfra.cn
      secretName: kunpengaccci-tls
  rules:
    - host: kunpengaccci.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 80
            path: /
